# llamero

./: README.md  SUMMARY  pyproject.toml
.github/workflows/: build_readme.yml  generate_summaries.yaml  publish.yaml  test.yml
SUMMARIES/: PYTHON.md
docs/readme/: SUMMARY  base.md.j2
docs/readme/sections/: SUMMARY  structure.md.j2
github/workflows/: SUMMARY
src/: SUMMARY
src/llamero/: SUMMARY  __main__.py  config.py  dir2doc.py  process_task.py  tree_generator.py  utils.py
src/llamero.egg-info/: SUMMARY
src/llamero/summary/: SUMMARY  concatenative.py  python_files.py
tests/: SUMMARY  test_config.py  test_dir2doc.py  test_tree_generator.py  test_utils.py
tests/test_summary/: SUMMARY  test_aggregation.py  test_concatenative.py  test_python_signatures.py  test_size_limits.py
