[project]
name = "llamero"
version = "0.3.0"
description = "Tools to facilitate collaborating with LLMs"
requires-python = ">=3.11"
dependencies = [
    "Jinja2>=3.1.2",
    "tomli>=2.0.1",
    "loguru>=0.7.0",
    "fire>=0.5.0",
    "tree-format>=0.1.2",
    "pytest>=7.0",
    "markdown2>=2.4.0",
    "pyyaml>=6.0",
    "pathspec>=0.11.1",  # Added for gitignore-style pattern matching
]
readme = "README.md"
license = {file = "LICENSE"}

[project.scripts]
llamero = "llamero:__main__.cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Your existing tool configurations below...
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
